--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="./src/images/favicon-32x32.png" type="image/x-icon">
 
     <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="variables.css">
+    <link rel="stylesheet" href="./src/css/variables.css">
     <link rel="stylesheet" href="./src/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
